correcao das issues do sonar